--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "version": 2,
     "routes": [
       { "handle": "filesystem" },
-      { "src": "/index.js", "dest": "/src/server.js" }
+      { "src": "/scrape", "dest": "src/server.js" },
+      { "src": "/", "dest": "src/server.js" }
     ],
     "builds": [
       { "src": "src/server.js", "use": "@vercel/node" }
